@@ -110,7 +110,7 @@ Points to an object to manipulate.
 The object to append to \fIobjPtr\fR in \fBTcl_AppendObjToObj\fR.
 .AP int *lengthPtr out
 If non-NULL, the location where \fBTcl_GetStringFromObj\fR will store
-the the length of an object's string representation.
+the length of an object's string representation.
 .AP "CONST char" *string in
 Null-terminated string value to append to \fIobjPtr\fR.
 .AP va_list argList in
