@@ -280,7 +280,7 @@ all '../', './' removed.  Also it is one which is in the ``standard''
 format for the native platform.  On MacOS, Unix, this means the segments
 leading up to the path must be free of symbolic links/aliases (but the
 very last path component may be a symbolic link), and on Windows it also
-means means we want the long form with that form's case-dependence (which
+means we want the long form with that form's case-dependence (which
 gives us a unique, case-dependent path).  The one exception concerning the
 last link in the path is necessary, because Tcl or the user may wish to
 operate on the actual symbolic link itself (for example 'file delete', 'file
