@@ -332,7 +332,7 @@ The topmost or global namespace has the name ``'' (i.e., an empty string),
 although \fB::\fR is a synonym.
 As an example, the name \fB::safe::interp::create\fR
 refers to the command \fBcreate\fR in the namespace \fBinterp\fR
-that is a child of of namespace \fB::safe\fR,
+that is a child of namespace \fB::safe\fR,
 which in turn is a child of the global namespace \fB::\fR.
 .PP
 If you want to access commands and variables from another namespace,
