@@ -311,7 +311,7 @@ TclCreateProc(interp, nsPtr, procName, argsPtr, bodyPtr, procPtrPtr)
      * Break up the argument list into argument specifiers, then process
      * each argument specifier.
      * If the body is precompiled, processing is limited to checking that
-     * the the parsed argument is consistent with the one stored in the
+     * the parsed argument is consistent with the one stored in the
      * Proc.
      * THIS FAILS IF THE ARG LIST OBJECT'S STRING REP CONTAINS NULLS.
      */
